# kite2d

./: .gitignore  Makefile  README.md  hello.c  init.lua  main.lua  system.lua  test_entities.lua  window.lua
3rd/include/glad/: glad.h
3rd/src/: glad.c
ecs/: flag.lua  graphics.lua  id.lua  init.lua  preload.lua  spritelist.lua
ecs/components/: Animation.lua  Button.lua  Node.lua  Speed.lua  Sprite.lua
ecs/d-components/: Node.lua  Rectangle.lua  Speed.lua  Struct.lua  Transform.lua
ecs/s-components/: Animation.lua  Avatar.lua  Button.lua  Flipbook.lua  Fps.lua  Group.lua  HeroCamera.lua  Label.lua  Sprite.lua  Struct.lua  TextField.lua
ecs/systems/: Animation.lua  Edit.lua  Input.lua  Move.lua  Render.lua  Script.lua
ecs/util/: debug.lua  node.lua  sprite.lua
examples/1-hello-world/: main.lua
examples/2-hello-camera/: main.lua
examples/2-hello-ecs/: main.lua
examples/2019/: config.lua  main.lua  util.lua
examples/2019/scene/: game.lua  login.lua
examples/3-hello-ecs/: main.lua
examples/3-hello-editor/: main.lua
examples/4-hello-editor/: main.lua
examples/5-hello-game/: main.lua
examples/asset/: _entities.lua  entities.lua
examples/asset/font/: test.fnt
examples/ecs/: components.lua  functions.lua  init.lua
examples/ecs/systems/: Animation.lua  Debug.lua  Gravity.lua  Input.lua  Moving.lua  Render.lua  util.lua
examples/ecs01/: main.lua
examples/ecs01/ecs/: components.lua
examples/ecs01/ecs/systems/: Render.lua
examples/ecs02/: main.lua
examples/ecs02/ecs/: components.lua  functions.lua  init.lua
examples/ecs02/ecs/systems/: Animation.lua  Render.lua
examples/ecs03/: main.lua
examples/ecs03/ecs/: components.lua  functions.lua
examples/ecs03/ecs/systems/: Moveing.lua  Render.lua
examples/editor/: config.lua  main.lua  seri.lua  util.lua
examples/editor/font/: generic.fnt
examples/editor/script/: editor.lua
examples/editor/widget/: _poker.lua  hierarchy.lua  inspector.lua  poker.lua
examples/flybird/: config.lua  main.lua
examples/flybird/ecs/: components.lua  functions.lua  init.lua
examples/flybird/ecs/systems/: Animation.lua  Debug.lua  Gravity.lua  Input.lua  Moveing.lua  Render.lua
examples/game/: config.lua  main.lua
examples/game/ecs/: functions.lua  init.lua
examples/game/ecs/systems/: Render.lua
examples/game01/: main.lua
examples/game01/ecs/: components.lua  functions.lua  init.lua
examples/game01/ecs/systems/: Render.lua
examples/helloworld/: config.lua  main.lua
examples/helloworld/script/: button.lua  game.lua
examples/helloworld/thread/: audio.lua
fantasy/: _label.lua  _sprite.lua  camera.lua  graphics.lua  init.lua  window.lua
kite/: Miss.lua  audio.lua  font.lua  graphics.lua  helper.lua  init.lua  thread.lua  timer.lua  util.lua  widget.lua
kite/manager/: audio.lua  font.lua  program.lua  texture.lua
kite/shader/: sprite.lua
kite/ui/: animation.lua  init.lua  transition.lua
kite/ui/node/: button.lua  empty.lua  label.lua  sprite.lua  textfield.lua
kite/ui/system/: input.lua  touch.lua
luaclib/: laudio.c  lfantasy.c  lfantasy.h  lfont.c  lfont.h  lgraphics.c  lgraphics.h  lkite.c
luaclib-src/: lcamera.c  lcamera.h  lfantasy.c  lfantasy.h  lgraphics.c  lgraphics.h  lsystem.c  lsystem.h  lwindow.c  lwindow.h
p.android/: AndroidManifest.xml  CMakeLists.txt  README.md  asset_helper.c  asset_helper.h  asset_list.h  build.gradle  main.c
p.desktop/: main.c
resource/: sprite.fs  sprite.vs  text.fs  text.vs
shader/: shader.fs  shader.vs
src/: audio.c  audio.h  charbuffer.c  charbuffer.h  common.h  fant.c  fant.h  font.c  font.h  game.c  game.h  kite.c  kite.h  main.c  opengl.c  opengl.h  queue.c  queue.h  renderer.c  renderer.h  seri.c  seri.h  util.c  util.h  window.c  window.h
src/lib/: laudio.c  laudio.h  lgraphics.c  lgraphics.h  lkite.c  lkite.h  lmatrix.c  lmatrix.h  lprogram.c  lprogram.h  lsharetable.c  lsharetable.h  lsprite2d.c  lsprite2d.h  lthread.c  lthread.h
src/renderer/: manager.c  manager.h
